--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,6 +51,7 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   terraform:
@@ -68,6 +69,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    # login to azure account
+    - name: 'az cli login'
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.MYAPPREGISTRATION1 }}
+        tenant-id: ${{ secrets.TENNANT_ID }}
+        subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
