--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -70,12 +70,12 @@ jobs:
       uses: actions/checkout@v4
 
     # login to azure account
-    - name: 'az cli login'
-      uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.MYAPPREGISTRATION1 }}
-        tenant-id: ${{ secrets.TENNANT_ID }}
-        subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+    # - name: 'az cli login'
+    #   uses: azure/login@v1
+    #   with:
+    #     client-id: ${{ secrets.MYAPPREGISTRATION1 }}
+    #     tenant-id: ${{ secrets.TENNANT_ID }}
+    #     subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
 
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
