--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -77,6 +77,7 @@ jobs:
     #     tenant-id: ${{ secrets.TENNANT_ID }}
     #     subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
     
+    # updated az login
     - name: Azure Login
       uses: Azure/login@v2.3.0
       with:
